<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1">
	    
	    <Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/startPPT"
		android:id="@+id/start"
		/>
		
		<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/escPPT"
		android:id="@+id/escape"
		/>
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/imageView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="15"
	    android:background="@drawable/touchscreen"
	    android:orientation="horizontal" >
  
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/image2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_weight="0">
		
		<ToggleButton
		    android:id="@+id/pen"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:text="@string/pen"
		    android:textOn="@string/pen"          
            android:textOff="@string/pen"  />

		<ToggleButton
		    android:id="@+id/write"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:textOn="@string/write"          
            android:textOff="@string/write"   />
	
		<Button
		    android:id="@+id/K_Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/keep" />

		<Button
		    android:id="@+id/D_Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/delete" />

		<Button
		    android:id="@+id/specification"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/specification" />

	 </LinearLayout>
	 
</LinearLayout>
